# Adam_Luxy

./: .env.example  .gitignore  .railwayignore  ADAM_AGENT_ORIENTATION.md  ADAM_ATOM_TRIAGE_PASS_C.md  ADAM_Amazon_Dataset_Processing_Specification.md  ADAM_CLAUDE_CODE_CURSOR_GUIDE.md  ADAM_CTO_PERSONA.md  ADAM_DOCUMENT_INDEX.md  ADAM_EMERGENT_INTELLIGENCE_ARCHITECTURE.md  ADAM_HUMAN_MACHINE_TEAMING_FOUNDATION.md  ADAM_IMPLEMENTATION_COMPANION.md  ADAM_IMPLEMENTATION_COMPANION_PART2.md  ADAM_INTEGRATION_AUDIT_2026-04-15.md  ADAM_Integration_Bridge_Addendum_iHeart.md  ADAM_Integration_Bridge_FINAL.md  ADAM_Integration_Bridge_ReVerification_Report.md  ADAM_MASTER_IMPLEMENTATION_PACKAGE.md  ADAM_METAPHOR_REFERENCE.md  ADAM_PAGE_INTELLIGENCE_REVIEW.md  ADAM_RETARGETING_TRIAGE_PASS_D.md  ADAM_SESSION_RESTORE.md  ADAM_SESSION_TEMPLATES.md  ADAM_STAGE_1_POST_WIRING_VERIFICATION.md  ADAM_STAGE_1_WIRING_PLAN.md  ADAM_THEORETICAL_FOUNDATION.md  ADAM_WPP_iHeart_Platform_Alignment.md  ADAM_iHeart_Ad_Network_Integration_COMPLETE.md  CLAUDE.md  Dockerfile  INFORMATIV_Evolution_Presentation.html  INFORMATIV_System_Presentation.html  README_v4.md  StackAdapt's developer stack - from GraphQL to bid adapters.md  openmemory.md  pyproject.toml  railway.toml  requirements.txt
adam/: __init__.py  constants.py  main.py
dashboard/: .env.example  .gitignore  CONVENTIONS.md  package.json  pnpm-lock.yaml
data/: article_crawl_results.json  deep_article_crawl.json  derived_fulfillment_strengths.json  domain_crawl_results.json  domain_universe.json
deployment/: .env.production  DEPLOYMENT_GUIDE.md  DEPLOY_RAILWAY.md  Dockerfile  README.md  aws-setup.sh  docker-compose.prod.yml  launch-pilot.sh  nginx.conf  requirements.production.txt
docs/: ADAM_ARCHITECTURE_REFERENCE.md  ARCHITECTURAL_AUDIT_2026_04_26.md  B3_LUXY_PHASE_PLAN.md  CLAUDE CODE DIRECTIVE v3.1.md  CLAUDE_CODE_DIRECTIVE_FULL_BUILD.md  CLT_recalibration_2026_04_24.md  CODEBASE_AUDIT_2026_04_29.md  COMPREHENSIVE_BUILD_INVENTORY.md  CRITERION_II_STATUS_CORRECTION_2026_05_02.md  INDEX_EXCHANGE_MEETING_TALKING_POINTS.md  MEMORY.md  MINDSET_COVERAGE_GAP_ASSESSMENT_2026_05_07.md  NONCONSCIOUS_GOAL_PRIMING_RESEARCH.md  PILOT_BACKLOG.md  PILOT_BUILD_ROADMAP.md  PILOT_DEPLOYMENT_RUNBOOK.md  PILOT_FAILURE_MODE_RUNBOOK.md  PILOT_NEXT_MONTH_PLAN.md  PILOT_PLAN_2026_04_30.md  PILOT_PRE_REGISTERED_ANALYSIS_PLAN.md  PILOT_REVIEWER_METHODOLOGY_BRIEF.md  RETARGETING_AUDIT_2026_05_04.md  S0_HANDOFF_2026_05_04.md  (+1 more)
(+1892 files in other folders)
