[tool.poetry]
name = "adam-platform"
version = "1.0.0"
description = "AI-Driven Asset & Decision Manager - Enterprise Municipal Infrastructure Coordination System"
authors = ["ADAM Team"]
readme = "README.md"
packages = [{include = "adam"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# Database
neo4j = "^5.15.0"
redis = "^5.0.1"

# Kafka
aiokafka = "^0.10.0"

# HTTP Client
httpx = "^0.26.0"
aiohttp = "^3.9.1"

# Anthropic Claude
anthropic = "^0.14.0"

# Data Processing
numpy = "^1.26.3"
scipy = "^1.12.0"
pandas = "^2.1.4"

# Monitoring
prometheus-client = "^0.19.0"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
mypy = "^1.8.0"
ruff = "^0.1.11"
black = "^24.1.0"
pre-commit = "^3.6.0"
httpx = "^0.26.0"

[tool.poetry.scripts]
adam = "adam.main:main"
adam-test = "adam.testing.integration_test_runner:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=adam --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.coverage.run]
source = ["adam"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
